--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,13 @@
         }
     ],
     "require": {
-        "php" : "^7.1.3|^8.0",
-        "guzzlehttp/guzzle": "^6.3 || ^7.0.1",
-        "illuminate/support": "~5.8 || ^6.0 || ^7.0 || ^8.0",
-        "illuminate/notifications": "~5.8 || ^6.0 || ^7.0 || ^8.0"
+        "php" : "^8.1",
+        "guzzlehttp/guzzle": "^7.2",
+        "illuminate/support": "^9.0",
+        "illuminate/notifications": "^9.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5 || ^8.0"
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
